<resources>
    <string name="app_name">About Me</string>
    <string name="id">아이디</string>
    <string name="editid">아이디를 입력하세요.</string>
    <string name="password">비밀번호</string>
    <string name="editpassword">비밀번호를 입력하세요.</string>
    <string name="Login">로그인</string>
    <string name="signup">회원가입</string>

    <string name="name">이름</string>
    <string name="editname">이름을 입력하세요.</string>
</resources>